2001-08-04 Alexander Larsson <alexl@redhat.com>

	* gdk/win32/gdkinput.c:
	Add #ifdef HAVE_WINTAB around wintab.h include.

	* gtk/gtk.def:
	Removed marshals that have been moved to glib.
	Commented out plug and socket. They didn't compile for me 
	on win32.

2001-08-04  Hans Breuer  <hans@breuer.org>

	* gtk/stocks-icons/makefile.msc : new file
	* gtk/makefile.msc.in : use it

	* gtk/gtkstyle.c : not all platforms do provide M_PI and
	friends, but luckily there is G_PI

	* gtk/gtk.def : updated

	* gdk/win32/gdkwindow.c (gdk_window_new) : don't make all TEMP 
	windows WS_POPUP, but only those without a parent. This fixes the 
	mis-alignment between the selectable (temp, input only) window and 
	the window text of GtkLabel.

	(gdk_window_show) : respect private->state when actually showing
	the window.

	(gdk_window_set_transient_for) : Implementation from Wolfgang 
	Sourdeau <wolfgang@contre.com> ported to 2.0 and added some 
	error handling. Should fix #50586.

	* gdk/win32/gdkevents-win32.c : beautify log output

2001-08-04  Michael Natterer  <mitch@gimp.org>

	* gtk/gtkitemfactory.c (gtk_item_factory_create_item):
	Need to show the image after adding it to the GtkImageMenuItem.
	This used to work without in testgtk because of the
	gtk_widget_show_all() at the end of the function.
	(Closes #54978).

Tue Jul 31 22:59:33 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtknotebook.c (gtk_notebook_get_child_property): 
	(gtk_notebook_set_child_property): fix finding of child's page,
	since we have to validly deal with labels and menus here as well.
	(gtk_notebook_get_child_property): fix warning.
	(gtk_notebook_class_init): property tab_pack is of type
	GTK_TYPE_PACK_TYPE (enum) not boolean.
	(gtk_notebook_find_child): don't always warn, we might be looking
	for a label or menu child.
	(gtk_notebook_map): fix mapping of panel.

	* gtk/gtkwidget.c (gtk_widget_set_child_visible): always constrain
	widget's mapped state, regardless of the value being set equals